CHANGELOG plg_clm_show_ext ab 0.8.0
------------

Legend:
* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
% -> Performance Fix
- -> Removed
! -> Note

- - - - - 0.9.1 - [06-10-2019] - - - - - - - - - - - - - - - - - - - -
+ View Paarungsliste

- - - - - 0.9.0 - [28-05-2019] - - - - - - - - - - - - - - - - - - - -
+ englische Sprachdateien

- - - - - 0.8.0 - [20-05-2019] - - - - - - - - - - - - - - - - - - - -
+ Startpunkt
