@@ -16,7 +16,7 @@ PLG_CLM_SHOW_ERR_TAG="Die Anzahl der Parameter ist ungültig."
 PLG_CLM_SHOW_ERR_ID="Die ID muss eine Nummer > 0 sein."
 PLG_CLM_SHOW_ERR_SOURCE="Die Source-ID muss eine Nummer > 0 und < 4 sein."
 PLG_CLM_SHOW_ERR_STYLE="Der Gestaltungsparameter muss zwischen 0 und 6 liegen. Standard ist 0."
-PLG_CLM_SHOW_ERR_VIEW="Der Viewparameter muss eine Nummer < 4 sein."
+PLG_CLM_SHOW_ERR_VIEW="Der Viewparameter muss eine Nummer < 5 sein."
 PLG_CLM_SHOW_ERR_RUNDE="Die Runde muss als Nummer > 0 angegeben werden."
 PLG_CLM_SHOW_ERR_PAAR="Das Paar muss als Nummer > 0 angegeben werden."
 PLG_CLM_SHOW_ERR_DG="Der Durchgang muss als Nummer > 0 angegeben werden. Standard ist 1."
@@ -39,6 +39,7 @@ PLG_CLM_SHOW_ERR_BAD="Etwas stimmt mit dem Input der Datenquelle nicht."
 PLG_CLM_SHOW_ERR_HIGHLIGHTING="In der Hervorhebungskonfiguration liegt ein Fehler, die richtige Form ist '<vereinsname1>?<bold>?<color>!<vereinsname2>?<bold>?<color>!<vereinsname3>?<bold>?<color>'."
 
 ; Tabelle Paarungsliste
+LEAGUE="Liga"
 ROUND="Runde"
 PAAR="Paar"
 TLN="Tln"
@@ -47,5 +48,14 @@ DWZ="DWZ"
 RESULT="Ergebnis"
 GUEST="Gast"
 FIXTURE_DATE="Spieltermin"
+DG="DG"
+RANG="Rg"
+TEAM="Mannschaft"
+MP="MP"
+BP="BP"
+TABELLE_GAMES_PLAYED="G"
+TABELLE_WINS="S"
+TABELLE_DRAW="R"
+TABELLE_LOST="V"
 
 DATE_FORMAT_CLM_F="d. F Y"
