@@ -5,16 +5,19 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 PLG_CONTENT_CLM_SHOW_EXT="Inhalt - Darstellung von CLM-Daten innerhalb von Artikeln "
-PLG_CLM_SHOW_EXT_DESC='<h2>Darstellung von Ligen von CLM-Seiten innerhalb von Artikeln</h2>
-<p>Nach Aktivierung des Plugins kann auf jeder beliebigen Seite das Tag [showCLMData:&lt;source&gt;:&lt;liga&gt;:&lt;style&gt;:&lt;view&gt;:&lt;runde&gt;:&lt;paarung&gt;:&lt;durchgang&gt;] eingefügt werden.</p>
+PLG_CLM_SHOW_EXT_DESC='<h2>Darstellung von CLM-Daten innerhalb von Artikeln</h2>
+<p>Nach Aktivierung des Plugins kann auf jeder beliebigen Seite das Tag [showCLMData:&lt;source&gt;:......] eingefügt werden.</p>
 <p>Dieses Tag wird dann durch die entsprechende Tabelle ersetzt.</p>
+<p>Grundtypen des Tags</p>
+<p>Liga bezogen: [showCLMData:&lt;source&gt;:&lt;liga&gt;:&lt;style&gt;:&lt;view&gt;:&lt;runde&gt;:&lt;paarung&gt;:&lt;durchgang&gt;] für alle Views &lt; 10 </p>
+<p>Season bezogen: [showCLMData:&lt;source&gt;:&lt;saison&gt;:&lt;style&gt;:&lt;view&gt;:&lt;vereinZPS&gt;] für alle Views &gt; 10 </p>
 <p> </p>
 <p>Source (Datenquelle, immer Pflicht):</p>
 <p>1 = J-Seite, die als Plugin-Parameter Datenquelle 1 eingetragen ist</p>
 <p>2 = J-Seite, die als Plugin-Parameter Datenquelle 2 eingetragen ist</p>
 <p>3 = J-Seite, die als Plugin-Parameter Datenquelle 3 eingetragen ist</p>
-<p>Liga:</p>
-<p>Liganummer (immer Pflicht)</p>
+<p>Liga: oder Saison:</p>
+<p>Liganummer oder Saison-ID (immer Pflicht)</p>
 <p>Style:</p>
 <p>0 = Automatische Breite (Standard)</p>
 <p>1 = Maximale Breite</p>
@@ -28,8 +31,12 @@ PLG_CLM_SHOW_EXT_DESC='<h2>Darstellung von Ligen von CLM-Seiten innerhalb von Ar
 <p>1 = Tabelle</p>
 <p>2 = Paarungsliste</p>
 <p>3 = Paarung</p>
-<p>Runde:</p>
-<p>Rundennummer - Pflicht bei View Paarung</p>
+<p>4 = Spielplan einer Mannschaft</p>
+<p>14 = Spielplan eines Vereins innerhalb einer Saison<p>
+<p>Runde(5.Parameter)</p>
+<p>- Runde: Pflicht bei View Paarung oder </p>
+<p>- Teilnehmernummer/Startnummer: Pflicht bei Spielplan Mannschaft oder </p>
+<p>- Vereins-ZPS: Pflicht bei Spielplan Verein (DEU: z.B G0222, ENG: z.B. 7ATT)</p>
 <p>Paar:</p>
 <p>Paarungsnummer - Pflicht bei View Paarung</p>
 <p>Durchgang:</p>
