@@ -18,8 +18,8 @@ PLG_CLM_SHOW_ERR_SOURCE="The 'data source ID' must be 1 or 2 or 3."
 PLG_CLM_SHOW_ERR_STYLE="The 'style parameter' has to be between 0 and 6.<br />
 0 = auto width; 1 = max width; 2 = auto width + left; 3 = auto width + middle<br />
 4 = auto width + right, 5 = auto width + float left; 6 = auto width + float right"
-PLG_CLM_SHOW_ERR_VIEW="The parameter 'view' has to be set as nummber 0 or 1 or 3.<br />
-0 = cross-table (default); 1 = Table; 3 = Fixture"
+PLG_CLM_SHOW_ERR_VIEW="The parameter 'view' has to be set as nummber 0, 1, 2, 3 or 4.<br />
+0 = cross-table (default); 1 = Table; 2 = Pairing list; 3 = Fixture; 4 = Game plan"
 PLG_CLM_SHOW_ERR_RUNDE="The round must be specified with a number > 0."
 PLG_CLM_SHOW_ERR_PAAR="The fixture must be specified by a number > 0."
 PLG_CLM_SHOW_ERR_DG="The leg (first leg, second leg, ...) must be specified by a number > 0. The default number is 1."
@@ -42,6 +42,7 @@ PLG_CLM_SHOW_ERR_BAD="Something is wrong with the input from the data source."
 PLG_CLM_SHOW_ERR_HIGHLIGHTING="In the highlighted configuration is an error, the correct syntax is '<teamname1>?<bold>?<color>!<teamname2>?<bold>?<color>!<teamname3>?<bold>?<color>'."
 
 ; Table Fixtures
+LEAGUE="League"
 ROUND="Round"
 PAAR="Fixture"
 TLN="TNo"
@@ -50,5 +51,14 @@ DWZ="Grade"
 RESULT="Result"
 GUEST="Guest"
 FIXTURE_DATE="Date"
+DG="Leg"
+RANG="Rnk"
+TEAM="Team"
+MP="Pt"
+BP="Boards"
+TABELLE_GAMES_PLAYED="GP"
+TABELLE_WINS="W"
+TABELLE_DRAW="D"
+TABELLE_LOST="L"
 
 DATE_FORMAT_CLM_F="dS F Y"
