@@ -6,15 +6,18 @@
 
 PLG_CONTENT_CLM_SHOW_EXT="Content - Import of CLM-Leagues"
 PLG_CLM_SHOW_EXT_DESC="<h2>Import of CLM Leagues</h2>
-<p>After plugin activation, you are able to place a tag on any content page like this [showCLMData:&lt;data-source-id&gt;:&lt;league-id&gt;:&lt;style&gt;:&lt;view&gt;:&lt;round-id&gt;:&lt;fixture-id&gt;:&lt;leg&gt;].</p>
+<p>After plugin activation, you are able to place a tag on any content page like this [showCLMData:&lt;data-source-id&gt;:....].</p>
 <p>The tag will be replaced by the corresponding table.</p>
+<p>Basic types of the tag</p>
+<p>League related: [showCLMData:&lt;data-source&gt;:&lt;league-id&gt;:&lt;style&gt;:&lt;view&gt;:&lt;round-id&gt;:&lt;fixture-id&gt;:&lt;leg&gt;] used for all views &lt; 10</p>
+<p>Season related: [showCLMData:&lt;data-source&gt;:&lt;season-id&gt;:&lt;style&gt;:&lt;view&gt;:&lt;club-id&gt;] used for all views &gt; 10</p>
 <p> </p>
 <p>Source (data source ID; always obligatory):</p>
 <p>1 = Enter the URL of the Joomla-website, used as plugin-parameter of data source 1</p>
 <p>2 = Enter the URL of the Joomla-website, used as plugin-parameter of data source 2</p>
 <p>3 = Enter the URL of the Joomla-website, used as plugin-parameter of data source 3</p>
-<p>League:</p>
-<p>League-ID (always obligatory; if you don't know this id, ask your webmaster)</p>
+<p>League: or Season:</p>
+<p>League-ID or Season-ID (always obligatory; if you don't know this id, ask your webmaster)</p>
 <p>Style:</p>
 <p>0 = auto width</p>
 <p>1 = max width</p>
@@ -28,10 +31,15 @@ PLG_CLM_SHOW_EXT_DESC="<h2>Import of CLM Leagues</h2>
 <p>1 = Table</p>
 <p>2 = Pairing List</p>
 <p>3 = Fixture</p>
-<p>Round:</p>
-<p>Number of Round - obligatory in 'View Fixture' (if you don't know this id, ask your webmaster)</p>
+<p>4 = Game plan of a team</p>
+<p>14 = Game plan of a club</p>
+<p>Round(5th parameter):</p>
+<p>- Number of Round - obligatory in 'View Fixture' oder </p>
+<p>- Competition No - obligatory in View 'Game plan of team' oder </p>
+<p>- Club-ID-Code - obligatory in 'View Game plan of club' (GER: z.B G0222, ENG: z.B. 7ATT)</p>
+<p>  (if you don't know any id or code, ask your webmaster)</p>
 <p>Fixture:</p>
-<p>Paarungsnummer - obligatory in 'View Fixture' (if you don't know this id, ask your webmaster)</p>
+<p>Fixture No - obligatory in 'View Fixture' (if you don't know this id, ask your webmaster)</p>
 <p>Leg:</p>
 <p>Leg Number - default is 1</p>
 <p>Examples: 
