@@ -11,6 +11,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+- - - - - 0.9.2 - [xx-xx-2019] - - - - - - - - - - - - - - - - - - - -
++ View Spielplan Mannschaft
++ View Spielplan Verein
+
 - - - - - 0.9.1 - [06-10-2019] - - - - - - - - - - - - - - - - - - - -
 + View Paarungsliste
 
